Minor styling fix: spacing of post headers and icons

--- a/blog/themes/jxf-theme/assets/styles/modules/_utilities.scss
+++ b/blog/themes/jxf-theme/assets/styles/modules/_utilities.scss
@@ -25,6 +25,7 @@
 .m2  { margin: $margin*2; }
 .mx2 { margin-left: $margin*2; margin-right: $margin*2; }
 .my2 { margin-top: $margin*2; margin-bottom: $margin*2; }
+.mr2 { margin-right: $margin*2; }
 
 .clearfix:after {
   content: "";
